src/App.scss
body {
	background-color: #0f0f0f;

	@media only screen and (min-width: 600px) {
		background-image: url("../public/assets/PrimaryBackground.png");
		background-repeat: no-repeat;
		background-position: 0% 100%;
	}
}

.margin {
	position: relative;

	&__arrow-left {
		position: absolute;
		width: 4.6rem;
		height: 4.6rem;

		top: 34.6rem;
		left: 0.9rem;
		padding: 0;
		border: 0;
		background: transparent;

		@media only screen and (min-width: 600px) {
			width: 6.8rem;
			height: 6.4rem;
			top: 32.22rem;
			left: 4rem;
		}

		@media only screen and (min-width: 800px) {
			top: 32.22rem;
			left: 12rem;
		}

		img {
			padding: 0;
			border: 0;

			@media only screen and (min-width: 600px) {
				width: 6.4rem;
				height: 6.4rem;
			}
		}
	}
	&__arrow-right {
		position: absolute;
		width: 4.6rem;
		height: 4.6rem;
		padding: 0;
		top: 34.6rem;
		right: 0.9rem;
		background: transparent;
		border: 0;

		@media only screen and (min-width: 600px) {
			width: 6.8rem;
			height: 6.4rem;
			top: 32.22rem;
			right: 4.9rem;
		}

		@media only screen and (min-width: 800px) {
			top: 32.22rem;
			right: 12.9rem;
		}

		img {
			border: 0;
			padding: 0;

			@media only screen and (min-width: 600px) {
				width: 6.4rem;
				height: 6.4rem;
			}
		}
	}
}

.header {
	background-color: #0f0f0f;
	height: 9.6rem;
	padding-left: 1.7rem;
	display: flex;
	align-items: center;

	@media only screen and (min-width: 600px) {
		padding-left: 8rem;
	}

	@media only screen and (min-width: 1600px) {
		padding-left: 5%;
	}
}

.form {
	margin-top: 3.1rem;
	@media only screen and (min-width: 600px) {
		margin-top: 19.2rem;
	}

	&__title {
		margin-bottom: 1rem;
		text-transform: uppercase;
		letter-spacing: 0.1rem;
		color: #999999;
	}

	&__instructions {
		min-height: 9.6rem;
		max-width: 45.2rem;

		@media only screen and (min-width: 600px) {
			min-height: 6.4rem;
		}
	}

	&__wrapper {
		display: flex;
		flex-direction: column;
		align-items: center;
		margin: 5.9rem auto 0;

		width: 29rem;

		@media only screen and (min-width: 600px) {
			width: 35rem;
		}

		@media only screen and (min-width: 600px) {
			margin-top: 7.8rem;
		}

		&__info {
			color: #ffffff;
			font-size: 1rem;
			line-height: 2.2rem;
			width: 100%;
			display: flex;
			flex-direction: row;
			justify-content: space-between;

			.counter {
				align-self: flex-end;
			}
		}
		&__input {
			width: 100%;
			height: 4.2rem;
			padding: 1rem 2rem;
			border-radius: 5rem;
			color: #999999;
			border: 0;
			outline: none;
			font-family: "NHaasGroteskDSW01-55Rg";
			font-size: 1.6rem;
			line-height: 2.2rem;

			&.error {
				border: solid 1px #ff0000;
			}
		}

		&__error-field {
			height: 2.2rem;
			p {
				font-family: "NHaasGroteskDSW01-55Rg";
				color: #ff0000;
			}
		}
	}

	.submit {
		display: block;
		margin: 3.5rem auto 0;
		padding: 0.8rem 2rem;
		border-radius: 5rem;
		border: #272727;
		font-family: "NHaasGroteskDSW01-55Rg";
		color: #272727;
		font-size: 1.6rem;
		line-height: 2.2rem;

		@media only screen and (min-width: 600px) {
			margin-top: 7rem;
		}

		&.valid {
			border: 0.1rem solid #00ff57;
		}

		&.success {
			background-color: #ffffff;
			border: 0.1rem solid #00ff57;
		}
	}
}

